--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react": "^19.1.1",
     "@google/genai": "^1.21.0",
     "react-dom": "^19.1.1",
-    "zustand": "^5.0.8"
+    "zustand": "4.5.2"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
