--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.1.1",
-    "@google/genai": "^1.21.0",
-    "react-dom": "^19.1.1",
-    "zustand": "^5.0.8"
+    "react": "^19.2.0",
+    "@google/genai": "0.12.0",
+    "zustand": "^5.0.8",
+    "react-dom": "^19.2.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
